--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,28 @@
 
   <build>
     <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.7</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.9</version>
+      </plugin>
+
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>maven-jetty-plugin</artifactId>
@@ -46,36 +68,232 @@
         </configuration>
       </plugin>
 
-<!--      <plugin>-->
-<!--        <groupId>org.codehaus.modello</groupId>-->
-<!--        <artifactId>modello-maven-plugin</artifactId>-->
-<!--        <version>1.8.1</version>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <configuration>-->
-<!--              <models>-->
-<!--                <model>src/main/mdo/maven.mdo</model>-->
-<!--              </models>-->
-<!--              <version>4.0.0</version>-->
-<!--            </configuration>-->
-<!--            <goals>-->
-<!--              <goal>java</goal>-->
-<!--            </goals>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.1</version>
+        <executions>
 
+          <!--          Clean lifecycle          -->
+          <execution>
+            <id>id.pre-clean7</id>
+            <phase>pre-clean</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>pre-clean phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>id.clean</id>
+            <phase>clean</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>clean phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>id.post-clean</id>
+            <phase>post-clean</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>post-clean phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <!--          Build lifecycle          -->
+          <execution>
+            <id>id.validate</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>validate phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>id.compile</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>compile phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>id.test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>test phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>id.package</id>
+            <phase>package</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>package phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>id.deploy</id>
+            <phase>deploy</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>deploy phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>id.pre-site</id>
+            <phase>pre-site</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>pre-site phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+
+<!--          Site lifecycle          -->
+          <execution>
+            <id>id.site</id>
+            <phase>site</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>site phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>id.post-site</id>
+            <phase>post-site</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>post-site phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>id.site-deploy</id>
+            <phase>site-deploy</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <tasks>
+                <echo>site-deploy phase</echo>
+              </tasks>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>test</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.1</version>
+            <executions>
+              <execution>
+                <phase>test</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <tasks>
+                    <echo>Using env.test.properties</echo>
+                    <copy file="src/main/resources/env.test.properties"
+                          tofile="${project.build.outputDirectory}/some/path/env.properties"/>
+                  </tasks>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>prod</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.1</version>
+            <executions>
+              <execution>
+                <phase>test</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <tasks>
+                    <echo>Using env.test.properties</echo>
+                    <copy file="src/main/resources/env.prod.properties"
+                          tofile="${project.build.outputDirectory}/some/path/env.properties"/>
+                  </tasks>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
   <dependencies>
     <!--dependency>
@@ -87,7 +305,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
 
